[gd_scene load_steps=4 format=3 uid="uid://cn5gs4eorpydv"]

[ext_resource type="Script" path="res://objects/enter_level.gd" id="1_np5ym"]
[ext_resource type="PackedScene" uid="uid://cx6wh3xewgxr" path="res://interaction/interaction_area.tscn" id="2_lffvn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wtwmn"]
size = Vector2(414.5, 427)

[node name="EnterLevel" type="Node2D"]
script = ExtResource("1_np5ym")
metadata/_edit_group_ = true

[node name="InteractionArea" parent="." instance=ExtResource("2_lffvn")]
action_name = "to begin"
key = "Enter"
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(0.499512, -1.52588e-05)
shape = SubResource("RectangleShape2D_wtwmn")

[connection signal="area_entered" from="InteractionArea" to="." method="_on_interaction_area_area_entered"]
[connection signal="area_exited" from="InteractionArea" to="." method="_on_interaction_area_area_exited"]
